--- a/LookIntoYahooFinance/LookIntoYahooFinance.csproj
+++ b/LookIntoYahooFinance/LookIntoYahooFinance.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="YahooQuotesApi" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BJK.FinanceApi\BJK.FinanceApi.csproj" />
+  </ItemGroup>
+
 </Project>
