I'm starting the next library where I read the text file, opening things up to other forms of reading data

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# JSON files unique to an installation
+ReaderConfig.json
