--- a/BJK.TickerExtract/BJK.TickerExtract.csproj
+++ b/BJK.TickerExtract/BJK.TickerExtract.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
