--- a/LookIntoYahooFinance/LookIntoYahooFinance.csproj
+++ b/LookIntoYahooFinance/LookIntoYahooFinance.csproj
@@ -13,4 +13,16 @@
     <ProjectReference Include="..\BJK.TickerExtract\BJK.TickerExtract.csproj" />
   </ItemGroup>
 
+  <!-- Add the following to ensure appsettings.json is copied to the output directory -->
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="9.0.4" />
+  </ItemGroup>
+
 </Project>
