--- a/LookIntoYahooFinance/appsettings.json
+++ b/LookIntoYahooFinance/appsettings.json
@@ -6,7 +6,7 @@
         "WeeklyCsvFileDownload": "https://www.cboe.com/available_weeklys/get_csv_download/"
     },
     "PersonalData": {
-        "UninvestedCash": 600,
+        "UninvestedCash": 800,
         "MinumumUnitsToBuy": 200,
         "RatingsTolerance": [
             "Buy",
@@ -16,7 +16,33 @@
         ]
     },
     "ManualTickers": {
-        "ToOmit": ["EVGO","CHPT","BLNK","FFIE","SFIX","WKHS","WULF"],
+        "ToOmit": [
+            "EVGO",
+            "CHPT",
+            "BLNK",
+            "FFIE",
+            "SFIX",
+            "WKHS",
+            "WULF",
+            "RIG",
+            "CAN",
+            "OPEN",
+            "IRBT",
+            "PSQH",
+            "IQ",
+            "HIVE",
+            "ANVS",
+            "MVIS",
+            "GEVO",
+            "FFAI",
+            "PLUG",
+            "OPEN",
+            "CAN",
+            "BTBT",
+            "SAVA",
+            "SFIX",
+            "OMEX"
+        ],
         "ToAdd": []
     }
 }
