Updating my to omit array

--- a/LookIntoYahooFinance/appsettings.json
+++ b/LookIntoYahooFinance/appsettings.json
@@ -17,31 +17,43 @@
     },
     "ManualTickers": {
         "ToOmit": [
-            "EVGO",
-            "CHPT",
-            "BLNK",
-            "FFIE",
-            "SFIX",
-            "WKHS",
-            "WULF",
-            "RIG",
-            "CAN",
-            "OPEN",
-            "IRBT",
-            "PSQH",
-            "IQ",
-            "HIVE",
             "ANVS",
-            "MVIS",
-            "GEVO",
-            "FFAI",
-            "PLUG",
-            "OPEN",
-            "CAN",
+            "BBAI",
+            "BLNK",
             "BTBT",
+            "BITF",
+            "CAN",
+            "CHPT",
+            "CIFR",
+            "EVGO",
+            "FFAI",
+            "FFIE",
+            "GEVO",
+            "GRAB",
+            "HIVE",
+            "IQ",
+            "INO",
+            "IOVA",
+            "IRBT",
+            "LCID",
+            "MVIS",
+            "MLGO",
+            "MSOS",
+            "MVIS",
+            "NAK",
+            "NFE",
+            "OMEX",
+            "OPEN",
+            "PLUG",
+            "PSQH",
+            "QSI",
+            "RIG",
+            "RILY",
             "SAVA",
             "SFIX",
-            "OMEX"
+            "WKHS",
+            "WOLF",
+            "WULF"
         ],
         "ToAdd": []
     }
