adding more to the ignore list

--- a/LookIntoYahooFinance/appsettings.json
+++ b/LookIntoYahooFinance/appsettings.json
@@ -6,7 +6,7 @@
         "WeeklyCsvFileDownload": "https://www.cboe.com/available_weeklys/get_csv_download/"
     },
     "PersonalData": {
-        "UninvestedCash": 800,
+        "UninvestedCash": 2223,
         "MinumumUnitsToBuy": 200,
         "RatingsTolerance": [
             "Buy",
@@ -17,6 +17,15 @@
     },
     "ManualTickers": {
         "ToOmit": [
+            "FUBO",
+            "BYND",
+            "AMC",
+            "LAZR",
+            "SNDL",
+            "KULR",
+            "CLOV",
+            "TSLZ",
+            "VERU",
             "ANVS",
             "BBAI",
             "BLNK",
