Addinf a web api to replace the console app

--- a/LookIntoYahooFinance/appsettings.json
+++ b/LookIntoYahooFinance/appsettings.json
@@ -6,8 +6,8 @@
         "WeeklyCsvFileDownload": "https://www.cboe.com/available_weeklys/get_csv_download/"
     },
     "PersonalData": {
-        "UninvestedCash": 2223,
-        "MinumumUnitsToBuy": 200,
+        "UninvestedCash": 5766.48,
+        "MinumumUnitsToBuy": 100,
         "RatingsTolerance": [
             "Buy",
             "Strong Buy",
@@ -62,7 +62,9 @@
             "SFIX",
             "WKHS",
             "WOLF",
-            "WULF"
+          "WULF",
+          "TLRY",
+          "SPCE"
         ],
         "ToAdd": []
     }
