Front end basically in, functional, has decent UX

--- a/BJK.Finance.WebAPI/appsettings.json
+++ b/BJK.Finance.WebAPI/appsettings.json
@@ -19,53 +19,56 @@
       ]
     },
     "TickersToOmit": [
-        "FUBO",
-        "BYND",
-        "AMC",
-        "LAZR",
-        "SNDL",
-        "KULR",
-        "CLOV",
-        "TSLZ",
-        "VERU",
-        "ANVS",
-        "BBAI",
-        "BLNK",
-        "BTBT",
-        "BITF",
-        "CAN",
-        "CHPT",
-        "CIFR",
-        "EVGO",
-        "FFAI",
-        "FFIE",
-        "GEVO",
-        "GRAB",
-        "HIVE",
-        "IQ",
-        "INO",
-        "IOVA",
-        "IRBT",
-        "LCID",
-        "MVIS",
-        "MLGO",
-        "MSOS",
-        "NAK",
-        "NFE",
-        "OMEX",
-        "OPEN",
-        "PLUG",
-        "PSQH",
-        "QSI",
-        "RIG",
-        "RILY",
-        "SAVA",
-        "SFIX",
-        "WKHS",
-        "WOLF",
-        "WULF",
-        "TLRY",
-        "SPCE"
-      ]
-    }
+      "FUBO",
+      "BYND",
+      "AMC",
+      "LAZR",
+      "SNDL",
+      "KULR",
+      "CLOV",
+      "TSLZ",
+      "VERU",
+      "ANVS",
+      "BBAI",
+      "BLNK",
+      "BTBT",
+      "BITF",
+      "CAN",
+      "CHPT",
+      "CIFR",
+      "EVGO",
+      "FFAI",
+      "FFIE",
+      "GEVO",
+      "GRAB",
+      "HIVE",
+      "IQ",
+      "INO",
+      "IOVA",
+      "IRBT",
+      "LCID",
+      "MVIS",
+      "MLGO",
+      "MSOS",
+      "NAK",
+      "NFE",
+      "OMEX",
+      "OPEN",
+      "PLUG",
+      "PSQH",
+      "QSI",
+      "RIG",
+      "RILY",
+      "SAVA",
+      "SFIX",
+      "WKHS",
+      "WOLF",
+      "WULF",
+      "TLRY",
+      "SPCE",
+      "AGNC",
+      "APLD",
+      "AMC"
+    ]
   }
+}
