--- a/BJK.Finance.WebAPI/appsettings.json
+++ b/BJK.Finance.WebAPI/appsettings.json
@@ -9,8 +9,8 @@
   "AppSettings": {
     "WeeklyCsvFileDownload": "https://www.cboe.com/available_weeklys/get_csv_download/",
     "PersonalData": {
-      "UninvestedCash": 5766.48,
-      "MinumumUnitsToBuy": 100,
+      "UninvestedCash": 2883.60,
+      "MinumumUnitsToBuy": 200,
       "RatingsTolerance": [
         "Buy",
         "Strong Buy",
@@ -69,7 +69,12 @@
       "AGNC",
       "APLD",
       "AMC",
-      "WRBY"
+      "WRBY",
+      "NIO",
+      "LAES",
+      "MNKD",
+      "VFS",
+      "ALT"
     ]
   }
 }
