Adding a new ticker

--- a/BJK.Finance.WebAPI/appsettings.json
+++ b/BJK.Finance.WebAPI/appsettings.json
@@ -9,7 +9,7 @@
   "AppSettings": {
     "WeeklyCsvFileDownload": "https://www.cboe.com/available_weeklys/get_csv_download/",
     "PersonalData": {
-      "UninvestedCash": 2883.60,
+      "UninvestedCash": 1235.78,
       "MinumumUnitsToBuy": 200,
       "RatingsTolerance": [
         "Buy",
@@ -74,7 +74,8 @@
       "LAES",
       "MNKD",
       "VFS",
-      "ALT"
+      "ALT",
+      "UUUU"
     ]
   }
 }
