--- a/Frontend/src/BJK.Finance.Frontend.React.JS/finance-decisions-react-js/package.json
+++ b/Frontend/src/BJK.Finance.Frontend.React.JS/finance-decisions-react-js/package.json
@@ -15,7 +15,8 @@
     "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
